--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   },
   "dependencies": {
     "@eslint/js": "^9.25.1",
+    "@types/ramda": "^0.30.2",
     "eslint-config-prettier": "^10.1.2",
     "globals": "^16.0.0",
+    "ramda": "^0.30.1",
     "typescript-eslint": "^8.31.0"
   }
 }
