--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/ramda": "^0.30.2",
     "eslint-config-prettier": "^10.1.2",
     "globals": "^16.0.0",
+    "nanoid": "^5.1.5",
     "ramda": "^0.30.1",
     "typescript-eslint": "^8.31.0"
   }
