--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "main": "index.js",
   "scripts": {
     "test": "vitest run",
+    "test:tsc": "tsc --noEmit",
     "test:watch": "vitest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "dependency-cruiser": "^16.10.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
     "vite-tsconfig-paths": "^5.1.4",
@@ -23,6 +25,7 @@
     "globals": "^16.0.0",
     "nanoid": "^5.1.5",
     "ramda": "^0.30.1",
+    "ts-pattern": "^5.7.1",
     "typescript-eslint": "^8.31.0"
   }
 }
