--- a/package.json
+++ b/package.json
@@ -6,13 +6,19 @@
   "scripts": {
     "test": "vitest run",
     "test:tsc": "tsc --noEmit",
-    "test:watch": "vitest"
+    "test:watch": "vitest",
+    "build:graph": "npx depcruise src/classses/Lax --include-only src --output-type dot | dot -T svg | npx depcruise-wrap-stream-in-html > index.html",
+    "build:graph:watch": "nodemon --watch src --exec \"npm run build:graph\"",
+    "serve:graph": "http-server",
+    "watch:graph": "concurrently \"npm run build:graph:watch\" \"npm run serve:graph\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "concurrently": "^9.1.2",
     "dependency-cruiser": "^16.10.2",
+    "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
     "vite-tsconfig-paths": "^5.1.4",
@@ -23,6 +29,7 @@
     "@types/ramda": "^0.30.2",
     "eslint-config-prettier": "^10.1.2",
     "globals": "^16.0.0",
+    "http-server": "^14.1.1",
     "nanoid": "^5.1.5",
     "ramda": "^0.30.1",
     "ts-pattern": "^5.7.1",
