--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test:tsc": "tsc --noEmit",
     "test:watch": "vitest",
     "build:graph": "npx depcruise src/classses/Lax --include-only src --output-type dot | dot -T svg | npx depcruise-wrap-stream-in-html > index.html",
-    "build:graph:watch": "nodemon --watch src --exec \"npm run build:graph\"",
+    "build:graph:watch": "nodemon --watch src --exec \"npm run build:graph && npm run serve:graph\"",
     "serve:graph": "http-server",
     "watch:graph": "concurrently \"npm run build:graph:watch\" \"npm run serve:graph\""
   },
