chore: rename dir, type -> coreTypes

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "vitest run",
     "test:tsc": "tsc --noEmit",
     "test:watch": "vitest",
-    "graph:build": "depcruise src/classses --include-only src --output-type dot | dot -T svg | depcruise-wrap-stream-in-html > index.html",
+    "graph:build": "depcruise src/coreTypes --include-only src --output-type dot | dot -T svg | depcruise-wrap-stream-in-html > index.html",
     "graph:watch": "nodemon --watch src --ext ts --exec \"npm run graph:build\"",
     "graph:serve": "concurrently \"npm run graph:watch\" \"vite\""
   },
