--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
+    "vite": "^6.3.5",
     "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "^3.1.2",
-    "vite": "^6.3.5"
+    "vitest": "^3.1.2"
   },
   "dependencies": {
     "@eslint/js": "^9.25.1",
