chore(package.json): cleanup scripts

--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "vitest run",
-    "test:tsc": "tsc --noEmit",
-    "test:watch": "vitest",
-    "graph:build": "depcruise src --include-only src --output-type dot | dot -T svg | depcruise-wrap-stream-in-html > index.html",
-    "graph:test": "depcruise src --include-only src",
+    "transform": "nodemon --watch src --ext ts --exec \"tsx ./src/test.ts\"",
+    "graph:build": "depcruise src --output-type dot | dot -T svg | depcruise-wrap-stream-in-html > index.html",
+    "graph:test": "depcruise src",
     "graph:watch": "nodemon --watch src --ext ts --exec \"npm run graph:build\"",
     "graph:serve": "concurrently \"npm run graph:watch\" \"vite\"",
-    "transform": "nodemon --watch src --ext ts --exec \"tsx ./src/test.ts\""
+    "test": "concurrently \"npm run test:vitest\" \"npm run test:tsc\" \"npm run graph:test\"",
+    "test:vitest": "vitest run",
+    "test:tsc": "tsc --noEmit",
+    "test:watch:vitest": "vitest"
   },
   "keywords": [],
   "author": "",
